// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render a non-inline text element 1`] = `
<Text
  isInline={false}
  tag="span"
  type="body"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={false}
    textType="body"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "hhBmuh",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={false}
      textType="body"
    >
      <span
        className="hhBmuh"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render a text element as a h1 1`] = `
<Text
  isInline={true}
  tag="h1"
  type="body"
>
  <styled.span
    as="h1"
    data-component-type="text"
    isInline={true}
    textType="body"
  >
    <StyledComponent
      as="h1"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "ftogVA",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="body"
    >
      <h1
        className="ftogVA"
        data-component-type="text"
      >
        Hello, world!
      </h1>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render a text with data attributes 1`] = `
<Text
  dataAttributes={
    Object {
      "otherKey": "myOtherKey",
      "role": "myRole",
    }
  }
  isInline={true}
  tag="span"
  type="body"
>
  <styled.span
    as="span"
    data-component-type="text"
    data-otherKey="myOtherKey"
    data-role="myRole"
    isInline={true}
    textType="body"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      data-otherKey="myOtherKey"
      data-role="myRole"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "ftogVA",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="body"
    >
      <span
        className="ftogVA"
        data-component-type="text"
        data-otherKey="myOtherKey"
        data-role="myRole"
      >
        Hello! I am text with data attributes
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render a text with margin 1`] = `
<Text
  isInline={true}
  margins={
    Object {
      "bottom": 20,
      "left": 20,
      "right": 20,
      "top": 20,
    }
  }
  tag="span"
  type="body"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={true}
    margins={
      Object {
        "bottom": 20,
        "left": 20,
        "right": 20,
        "top": 20,
      }
    }
    textType="body"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "ksDXSn",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      margins={
        Object {
          "bottom": 20,
          "left": 20,
          "right": 20,
          "top": 20,
        }
      }
      textType="body"
    >
      <span
        className="ksDXSn"
        data-component-type="text"
      >
        Hello! I have special margin
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with colored text 1`] = `
<Text
  color="#F25749"
  isInline={true}
  tag="span"
  type="body"
>
  <styled.span
    as="span"
    color="#F25749"
    data-component-type="text"
    isInline={true}
    textType="body"
  >
    <StyledComponent
      as="span"
      color="#F25749"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "kGJWZj",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="body"
    >
      <span
        className="kGJWZj"
        color="#F25749"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with heading text 1`] = `
<Text
  isInline={true}
  tag="span"
  type="heading"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={true}
    textType="heading"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "eLrgvV",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="heading"
    >
      <span
        className="eLrgvV"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with heavy text 1`] = `
<Text
  isInline={true}
  tag="span"
  type="body"
  weight="heavy"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={true}
    textType="body"
    weight="heavy"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "bxeate",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="body"
      weight="heavy"
    >
      <span
        className="bxeate"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with small text 1`] = `
<Text
  isInline={true}
  tag="span"
  type="small"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={true}
    textType="small"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "iAZXlY",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="small"
    >
      <span
        className="iAZXlY"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with text 1`] = `
<Text
  isInline={true}
  tag="span"
  type="body"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={true}
    textType="body"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "ftogVA",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      textType="body"
    >
      <span
        className="ftogVA"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with the text converted to uppercase 1`] = `
<Text
  isInline={true}
  isUpper={true}
  tag="span"
  type="body"
>
  <styled.span
    as="span"
    data-component-type="text"
    isInline={true}
    isUpper={true}
    textType="body"
  >
    <StyledComponent
      as="span"
      data-component-type="text"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-gzVnrw",
            "isStatic": false,
            "lastClassName": "lmOJxA",
            "rules": Array [
              "
  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.span",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-gzVnrw",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      isInline={true}
      isUpper={true}
      textType="body"
    >
      <span
        className="lmOJxA"
        data-component-type="text"
      >
        Hello, world!
      </span>
    </StyledComponent>
  </styled.span>
</Text>
`;
